# Saki-chan

./: README.md  main.py  pyproject.toml  requirements.txt
cogs/: general.py  latex.py  lol.py  xkcd.py
http_request/: __init__.py
league_watcher/: __init__.py
tests/: test_saki_chan.py
utils/: league.py
